--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"Building the project...\" && exit 0"
   },
   "keywords": [],
   "author": "",
